[package]
name = "magic-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.26", features = ["zlib-ng"], default-features = false }
reqwest = { version = "0.11.18", features = ["blocking"] }
roxmltree = "0.18.0"
xmlparser = "0.13.5"
rust-htslib = "0.44.1"
warc = "0.3.1"
anyhow = "1.0.72"
indicatif = "0.17.5"
libflate = "1.4.0"
chardetng = "0.1.17"
libxml = "0.3.3"
gzip = "0.1.2"
rayon = "1.7.0"
regex = "1.9.1"
lazy_static = "1.4.0"

